fix: add logback dep