@@ -40,6 +40,9 @@ $Arguments = $JavaOpts + @(
     "-Dlogback.configurationFile=$CONF_DIR\logback.xml",
     "--module-path", $LIB_DIR,
     "--add-exports", "java.base/jdk.internal.misc=dongting.client",
+    "--add-modules", "org.slf4j,ch.qos.logback.classic",
+    "--add-reads", "dongting.client=org.slf4j",
+    "--add-reads", "dongting.client=ch.qos.logback.classic",
     "-m", "dongting.ops/com.github.dtprj.dongting.boot.Bootstrap",
     "-c", (Join-Path $CONF_DIR "config.properties"),
     "-s", (Join-Path $CONF_DIR "servers.properties")
