@@ -41,6 +41,9 @@ exec "$JAVA" $JAVA_OPTS \
     -Dlogback.configurationFile="$CONF_DIR/logback.xml" \
     --module-path "$LIB_DIR" \
     --add-exports java.base/jdk.internal.misc=dongting.client \
+    --add-modules org.slf4j,ch.qos.logback.classic \
+    --add-reads dongting.client=org.slf4j \
+    --add-reads dongting.client=ch.qos.logback.classic \
     -m dongting.ops/com.github.dtprj.dongting.boot.Bootstrap \
     -c "$CONF_DIR/config.properties" \
     -s "$CONF_DIR/servers.properties" \
